--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "firebase": "^9.10.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
@@ -20,7 +21,8 @@
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0"
+    "react-native-screens": "^3.18.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
