--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -18,6 +19,7 @@
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.7.0",
+    "react-native-image-picker": "^4.10.1",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
